inicios do trabalho em CRUD

--- a/mycontacts/static/css/add.css
+++ b/mycontacts/static/css/add.css
@@ -6,6 +6,10 @@ textarea {
 	padding-top: 15%;
 	padding-left: 15%;
 }
+.container-edit{
+	padding-top: 15%;
+	padding-left: 15%;
+}
 
 .form-label {
 	font-size: 13px;
