--- a/mycontacts/templates/mycontacts/show.html
+++ b/mycontacts/templates/mycontacts/show.html
@@ -13,6 +13,8 @@
             <div class="phone">{{ contact.phone }}</div>
             <div class="email"><a href='{{ contact.email }}'>{{ contact.email }}</a> </div>
         </div>
+        <button class="edit"><a href="/edit">Editar</a></button>
+        <button class="delete"><a href="/delete">Deletar</a></button>
     </li>
     {%  endfor %}
     
