--- a/mycontacts/static/css/show.css
+++ b/mycontacts/static/css/show.css
@@ -14,7 +14,6 @@ html{
 		margin: 0 auto;
 		}
 		.grid li {
-			
 			padding: 0 0.8em 1.3em ;
 		}
 		.grid li > div {
@@ -122,4 +121,12 @@ body {
     color:white;
     background-color: #0B3B39;
     padding: 0px 0px
+}
+
+#crud{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: 5vh;
 }
