--- a/mycontacts/templates/mycontacts/edit.html
+++ b/mycontacts/templates/mycontacts/edit.html
@@ -5,32 +5,31 @@
   <div class="container-add">
       <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xs-offset-3">
         		
-          <form id="add-contact-form" class="form" action="#" method="PATCH" role="form">
+          <form id="add-contact-form" class="form" action="#" method="POST" role="form">
             
               {% csrf_token %}
               {{ form.as_p }}
               
-            {% for edit in edits %}
-
               <div class="form-group">
-                  <label class="form-label">name</label>
-                  <input type="text" class="form-control" id="name" name="name" placeholder="Name" tabindex="1" value="{{ edit.name }}" required>
+                  <label class="form-label">Name</label>
+                  <input type="text" class="form-control" id="name" name="name" value="{{ contact.name }}" required>
               </div>
               <div class="form-group">
                   <label class="form-label">Relation</label>
-                  <input type="text" class="form-control" id="relation" name="relation" placeholder="Relation" tabindex="2" value="{{ edit.relation }}" required>
+                  <input type="text" class="form-control" id="relation" name="relation" value="{{ contact.relation }}" required>
               </div>
               <div class="form-group">
                   <label class="form-label">Phone</label>
-                  <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone" tabindex="3" value="{{ edit.phone }}" required>
+                    <input type="text" class="form-control" id="phone" name="phone" value="{{ contact.phone }}" required>
               </div>
               <div class="form-group">
                   <label class="form-label" for="email">Email</label>
-                  <input type="text" class="form-control" id="email" name="email" placeholder="Email" tabindex="4" value="{{ edit.email }}" required>
-              </div>  
+                  <input type="text" class="form-control" id="email" name="email" value="{{ contact.email }}" required>
+              </div>                            
               
-              {%  endfor %}
-            
+              <div class="text-center">
+                  <button type="submit" class="btn">Atualizar</button>
+              </div>
           </form>
           
       </div>
