--- a/mycontacts/templates/mycontacts/show.html
+++ b/mycontacts/templates/mycontacts/show.html
@@ -8,13 +8,13 @@
     {% for contact in contacts %}
     <li>
         <div>
-            <h2 class="name">{{ contact.name }}</h2>
+            <a href="detail/{{ contact.id }}"><h2 class="name">{{ contact.name }}</h2></a>
             <div class="relation">{{ contact.relation }}</div>
             <div class="phone">{{ contact.phone }}</div>
             <div class="email"><a href='{{ contact.email }}'>{{ contact.email }}</a> </div>
         </div>
-        <button class="edit"><a href="/edit">Editar</a></button>
-        <button class="delete"><a href="/delete">Deletar</a></button>
+        <button class="edit"><a href="{% url 'edit_contact' contact.id %}">Editar</a></button>
+        <button class="delete"><a href="/delete/{{ contact.id }}">Deletar</a></button>
     </li>
     {%  endfor %}
     
