--- a/mycontacts/templates/mycontacts/show.html
+++ b/mycontacts/templates/mycontacts/show.html
@@ -8,13 +8,16 @@
     {% for contact in contacts %}
     <li>
         <div>
-            <a href="detail/{{ contact.id }}"><h2 class="name">{{ contact.name }}</h2></a>
+            <a href="{% url 'ver_contato' contact.id %}"><h2 class="name">{{ contact.name }}</h2></a>
             <div class="relation">{{ contact.relation }}</div>
             <div class="phone">{{ contact.phone }}</div>
             <div class="email"><a href='{{ contact.email }}'>{{ contact.email }}</a> </div>
+            <!-- <button class="edit"><a href="{% url 'edit_contact' contact.id %}">Editar</a></button> -->
+            <button class="edit"><a href="{% url 'edit_contact' contact.id %}"><img src="../../static/edit.png" alt="" height="30px"></a></button>
+            <!-- <button class="delete"><a href="{% url 'delete_contact' contact.id %}">Deletar</a></button> -->
+            <button class="delete"><a href="{% url 'delete_contact' contact.id %}"><img src="../../static/delete.png" alt="" height="30px"></a></button>
         </div>
-        <button class="edit"><a href="{% url 'edit_contact' contact.id %}">Editar</a></button>
-        <button class="delete"><a href="{% url 'delete_contact' contact.id %}">Deletar</a></button>
+        
     </li>
     {%  endfor %}
     
